# fuck_vacancysoft_refined

./: .env.example  .gitignore  KNOWN_LIMITATIONS.md  README.md  TODO.md  alembic.ini  launch_grok.py  pyproject.toml  run.sh  start.sh  test_quick.py
.github/: README.md
alembic/: env.py
configs/: agency_exclusions.yaml  app.toml  config.py  exporters.toml  legacy_routing.yaml  location_rules.yaml  scoring.toml  sector_taxonomy.yaml
docs/: CAMPAIGN_BUILDER_CHANGELOG.md  KNOWN_LIMITATIONS.md  TODO.md  architecture.md  auto_mark_dead_handoff.md  azure_deployment_delta.md  dependencies.md  deployment_plan.md  intelligence-providers.md  launch_plan.md  local_review_tunnel.md  outreach_email.md  prospero_architecture.md  prospero_overview.md  runbook_update_adapter.md  taxonomy_and_segmentation.md
mockup/: Prospero_Internal_Pitch.pptx  Prospero_Journey.pptx  Prospero_PRD_v1.0.docx  Prospero_Seed_Pitch.pptx  create_internal_pitch.js  create_journey_pitch.js  create_pitch.js  create_prd.js  index.html  package-lock.json  package.json
n8n_workflows/: Workflow A - Fuck Vacancysoft.json  Workflow B - Queue Intake - User Aware.json  Workflow C - Queue Processor multi user.json  Workflow D - Prospero Lead Intake.json
scripts/: apply_source_corrections.py  audit_adapter_locations.py  audit_adapter_locations_live.py  audit_generic_quality.py  audit_source_classifications.py  backfill_avature_locations.py  backfill_employer_sectors.py  backfill_generic_site_locations.py  backfill_sectors.py  check_generic_access.py  debug_arbuthnot_dom.py  debug_generic_location.py  debug_generic_site.py  debug_successfactors_location.py  export_companies_with_leads.py  export_jobs_audit.py  export_prompts_xlsx.py  export_stale_boards.py  export_taxonomy_xlsx.py  generic_waterfall_audit.py  generic_waterfall_test.py  mark_dead_boards.py  reclassify_risk_2026_04_30.py  redetect_failing_sources.py  reenrich_filtered_stubs.py  run_generic_backlog.py  sweep_agency_variants.py  test_403_alternatives.py  test_full_pipeline.py  test_generic_batched.py  test_generic_boards.py  test_live_scrapers.py  test_quick.py  test_successfactors.py  tunnel_prospero.sh
tests/: test_adapter_location_audit.py  test_adapters.py  test_advert_extraction.py  test_audit_embed_extraction.py  test_campaign_prompt_template.py  test_campaign_prompt_user_context.py  test_campaigns_launch.py  test_campaigns_list.py  test_classification.py  test_config.py  test_dossier_section_caps.py  test_employer_extraction.py  test_export.py  test_generic_site_adapter.py  test_generic_site_capture.py  test_generic_site_non_job_filter.py  test_hibob_eightfold_null_await.py  test_hm_candidate_cap.py  test_hm_search_template.py  test_location.py  test_outreach_dry_run.py  test_outreach_graph_client.py  test_outreach_models.py  test_outreach_secret_client.py  test_outreach_tasks.py  test_outreach_tracking.py  test_paste_lead.py  test_persistence_failure.py  test_pipeline_auto_mark_dead.py  test_recruiter_filter.py  test_scoring.py  test_sector_classifier.py  test_smoke.py  test_source_card_ledger_empty.py  test_sources_admin_actions.py  test_tracking_endpoints.py  test_user_campaign_prompts_models.py  test_users_api.py  test_users_models.py  (+1 more)
(+181 files in other folders)
